@@ -11,6 +11,9 @@ Package org.springframework.osgi.context
 Package org.springframework.osgi.util
 * BundleDelegatingClassLoader relies on default hashCode/equals methods to prevent caching proxies on bundle updates
 
+Package org.springframework.osgi.test
+* Instalation bundles have the location set to the backing resource URL if possible, falling back to the description
+
 
 Changes in version 1.0.1 (2008-02-29)
 -------------------------------------
